<resources>
    <string name="app_name">Open Photo Studio</string>
    <string name="select_image">Select Photo</string>
    <string name="image_edit">Photo Edit</string>
    <string name="gallery">Gallery</string>
    <string name="unknown">Unknown</string>
    <string name="image_save">Photo Export</string>
    <string name="msg_image_load_fail">An error occurred while loading the photo.</string>
    <string name="msg_image_process_fail">An error occurred while analyzing the photo.</string>
    <string name="msg_image_save_fail">An error occurred while saving your photo.</string>
    <string name="msg_face_detect_fail">Face is not detected in the photo.</string>
    <string name="smooth">Smooth</string>
    <string name="white">White</string>
    <string name="lipstick">Lipstick</string>
    <string name="blusher">Blusher</string>
    <string name="eye_zoom">Eye Zoom</string>
    <string name="face_slim">Face Slim</string>
    <string name="settings">Settings</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="show_skin_mask">Show Skin Mask</string>
    <string name="show_frame_rate">Show Frame Rate</string>
    <string name="show_matrix_info">Show Matrix Info</string>
    <string name="visualize_pipeline">Visualize Pipeline</string>
    <string name="image_size_limit">Photo Size Limit</string>
    <string name="size_no_limit">No Limit</string>
    <string name="show_face_rect">Show Face Rect</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="save_changes">Save Changes</string>
    <string name="back_to_home">Back to Home</string>
    <string name="beautify">Beautify</string>
    <string name="adjust">Adjust</string>
    <string name="contrast">Contrast</string>
    <string name="exposure">Exposure</string>
    <string name="saturation">Saturation</string>
    <string name="sharpen">Sharpen</string>
    <string name="brightness">Brightness</string>
    <string name="filter">Filter</string>
    <string name="filter_original">Original</string>
    <string name="filter_fairy_tale">Fairy Tale</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filter_sunset">Sunset</string>
    <string name="filter_white_cat">White Cat</string>
    <string name="filter_black_cat">Black Cat</string>
    <string name="filter_beauty">Beauty</string>
    <string name="filter_whitening">Whitening</string>
    <string name="filter_healthy">Healthy</string>
    <string name="version_x">Version %s</string>
    <string name="eliminate_pen">Eliminate Pen</string>
    <string name="image_effect">Image Effect</string>
    <string name="paint">Paint</string>
    <string name="lariat">Lariat</string>
    <string name="eraser">Eraser</string>
    <string name="generate">Generate</string>
    <string name="inpaint_checking">Validating inpaint area…</string>
    <string name="inpaint_loading">Inpaint in progress, please wait…</string>
    <string name="inpaint_failed">Inpaint failed, please try again.</string>
    <string name="composition">Composition</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="perspective">Perspective</string>
    <string name="freeform">Freeform</string>
    <string name="ratio_1_1" translatable="false">1:1</string>
    <string name="ratio_2_3" translatable="false">2:3</string>
    <string name="ratio_3_2" translatable="false">3:2</string>
    <string name="ratio_3_4" translatable="false">3:4</string>
    <string name="ratio_4_3" translatable="false">4:3</string>
    <string name="ratio_9_16" translatable="false">9:16</string>
    <string name="ratio_16_9" translatable="false">16:9</string>
    <string name="rotate_left">Left</string>
    <string name="rotate_right">Right</string>
    <string name="rotate_mirror">Mirror</string>
    <string name="rotate_flip">Flip</string>
    <string name="perspective_vertical">Vertical</string>
    <string name="perspective_horizontal">Horizontal</string>
    <string name="size_4k" translatable="false">4K</string>
    <string name="size_2k" translatable="false">2K</string>
    <string name="size_1k" translatable="false">1K</string>
</resources>