<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/debug_mode"
        android:title="@string/debug_mode"
        android:checkable="true" />
    <item android:title="@string/image_size_limit">
        <menu>
            <item
                android:id="@+id/size_no_limit"
                android:title="@string/size_no_limit"
                android:checkable="true" />
            <item
                android:id="@+id/size_4k"
                android:title="@string/size_4k"
                android:checkable="true" />
            <item
                android:id="@+id/size_2k"
                android:title="@string/size_2k"
                android:checkable="true" />
            <item
                android:id="@+id/size_1k"
                android:title="@string/size_1k"
                android:checkable="true" />
        </menu>
    </item>
</menu>