<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/show_face_rect"
        android:icon="@drawable/ic_visibility"
        android:title="@string/show_face_rect"
        app:showAsAction="ifRoom"
        android:visible="false" />
    <item
        android:id="@+id/save_to_gallery"
        android:icon="@drawable/ic_save"
        android:title="@string/save_to_gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_skin_mask"
        android:title="@string/show_skin_mask"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_frame_rate"
        android:title="@string/show_frame_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/show_matrix_info"
        android:title="@string/show_matrix_info"
        app:showAsAction="never" />
</menu>